--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,33 @@
-version: '3.8'
-
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "5000:5000"
-    environment:
-      FLASK_SECRET_KEY: "supersecretkey"
-      DATABASE_URL: "postgresql://user:password@db:5432/appdb"
-    depends_on:
-      - db
-
   db:
     image: postgres:13
+    container_name: python-crud-db-1
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: appdb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: items
+    ports:
+      - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  web:
+    build: .
+    container_name: python-crud-web-1
+    ports:
+      - "5000:5000"
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      DATABASE_URL: postgresql+psycopg2://postgres:postgres@db:5432/items
+    volumes:
+      - .:/app
 
 volumes:
   db_data:
